the AST_* m4 macros can still get all the #define's they need for the
auto* stuff.
----------------------------------------------------------------------
Wed Nov 26 18:49:32 2003                        Michael Jennings (mej)

Oops.  Forgot the most important part! :-P
----------------------------------------------------------------------
Wed Nov 26 21:07:16 2003                        Michael Jennings (mej)

Working on cleaning up namespace issues.
----------------------------------------------------------------------
Thu Nov 27 00:22:16 2003                        Michael Jennings (mej)

More namespace cleaning.  Just one more set to go.
----------------------------------------------------------------------
Tue Dec  9 21:53:50 2003                        Michael Jennings (mej)

Add --libs flag to libast-config.
----------------------------------------------------------------------
Fri Dec 12 22:01:42 2003                        Michael Jennings (mej)

Finished up namespace cleanups.
----------------------------------------------------------------------
Sat Jan 10 16:12:42 2004                        Michael Jennings (mej)

Step #1:  Update copyright statements.
Step #2:  ???
Step #3:  Profit.
----------------------------------------------------------------------
Wed Jan 21 18:19:49 2004                        Michael Jennings (mej)

Adding hash functions in preparation for a hash table implementation.
----------------------------------------------------------------------
Thu Jan 22 20:42:40 2004                        Michael Jennings (mej)

Added a few new hashes.

Fixed a typo in the old hashes.

LibAST-ized the hash tests and made new performance tests.

Anybody care to comment on the validity of my performance tests?  All
6 algorithms end up with pretty much the same results.  Do I need to
use a dictionary instead of random "words?"  That's kinda what I'm
thinking....
----------------------------------------------------------------------