@@ -2688,7 +2688,7 @@ extern int spiftool_temp_file(char *, size_t);
 /* strings.c */
 extern spif_charptr_t spiftool_substr(const spif_charptr_t, spif_int32_t, spif_int32_t);
 #if LIBAST_REGEXP_SUPPORT_POSIX && HAVE_REGEX_H
-extern spif_bool_t spiftool_regexp_match(const char *, const char *);
+extern spif_bool_t spiftool_regexp_match(const spif_charptr_t, const spif_charptr_t);
 extern spif_bool_t spiftool_regexp_match_r(const char *str, const char *pattern, regex_t **rexp);
 #endif
 extern char **spiftool_split(const char *, const char *);
